plugins {
    id 'java'
}

group 'sdm.project'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

dependencies {
    testImplementation(platform('org.junit:junit-bom:5.6.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
}

test {
    useJUnitPlatform()
}